src/test/ui/compile-fail-migration/import-from-missing.stderr
error[E0432]: unresolved import `spam::eggs`
  --> $DIR/import-from-missing.rs:11:17
   |
LL | use spam::{ham, eggs}; //~ ERROR unresolved import `spam::eggs` [E0432]
   |                 ^^^^ no `eggs` in `spam`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
